the 3 pages watched watchlist and favorates are know done we still need to fix watching and dont forget to chane the watchlist and the watched when each epsode is done
